--- a/server/src/main/resources/templates/login.html
+++ b/server/src/main/resources/templates/login.html
@@ -43,6 +43,11 @@
         </div>
 
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+
+        <div class="mt-3">
+            <a href="/signup" class="text-decoration-none">Don't have an account? Sign up</a>
+        </div>
+
         <p class="mt-5 mb-3 text-muted">&copy; 2024 CNAPP</p>
     </form>
 </main>
